--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
+# =============================================================================
+# FarsiTranscribe - Git Ignore Configuration
+# =============================================================================
+# This file ensures only essential code and scripts are tracked in version control
+# while excluding all temporary files, generated content, and system files.
+
+# =============================================================================
+# PYTHON - Core Python Files to Ignore
+# =============================================================================
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
 *$py.class
-
-# C extensions
 *.so
 
 # Distribution / packaging
@@ -27,8 +35,6 @@ share/python-wheels/
 MANIFEST
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -55,25 +61,18 @@ cover/
 *.mo
 *.pot
 
-# Django stuff:
+# Django/Flask/Web frameworks
 *.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
-
-# Flask stuff:
 instance/
 .webassets-cache
-
-# Scrapy stuff:
 .scrapy
 
-# Sphinx documentation
+# Documentation
 docs/_build/
-
-# PyBuilder
-.pybuilder/
-target/
+/site
 
 # Jupyter Notebook
 .ipynb_checkpoints
@@ -83,43 +82,43 @@ profile_default/
 ipython_config.py
 
 # pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+.python-version
 
 # pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
+poetry.lock
 
 # pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#pdm.lock
-#   pdm stores project-wide configurations in .pdm.toml, but it is recommended to not include it
-#   in version control.
-#   https://pdm.fming.dev/#use-with-ide
+pdm.lock
 .pdm.toml
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
+# PEP 582
 __pypackages__/
 
-# Celery stuff
+# Celery
 celerybeat-schedule
 celerybeat.pid
 
-# SageMath parsed files
+# SageMath
 *.sage.py
 
-# Environments
+# Type checkers
+.mypy_cache/
+.dmypy.json
+dmypy.json
+.pyre/
+.pytype/
+
+# Cython
+cython_debug/
+
+# =============================================================================
+# ENVIRONMENTS - Virtual Environments and Environment Files
+# =============================================================================
+
+# Virtual environments
 .env
 .venv
 env/
@@ -128,44 +127,142 @@ ENV/
 env.bak/
 venv.bak/
 
-# Spyder project settings
-.spyderproject
-.spyproject
+# Environment variables
+.env.local
+.env.development
+.env.test
+.env.production
 
-# Rope project settings
-.ropeproject
-
-# mkdocs documentation
-/site
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# pytype static type analyzer
-.pytype/
-
-# Cython debug symbols
-cython_debug/
+# =============================================================================
+# IDEs and EDITORS
+# =============================================================================
 
 # PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be added to the global gitignore or merged into this project gitignore.  For a PyCharm
-#  project, it is recommended to include the following files:
-#  .idea/
-#  *.iml
-#  *.ipr
-#  *.iws
+.idea/
+*.iml
+*.ipr
+*.iws
 
 # VS Code
 .vscode/
+*.code-workspace
 
-# Project specific
+# Vim
+*.swp
+*.swo
+*~
+
+# Emacs
+*~
+\#*\#
+/.emacs.desktop
+/.emacs.desktop.lock
+*.elc
+auto-save-list
+tramp
+.\#*
+
+# Sublime Text
+*.sublime-project
+*.sublime-workspace
+
+# Atom
+.atom/
+
+# =============================================================================
+# OPERATING SYSTEMS
+# =============================================================================
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+.AppleDouble
+.LSOverride
+Icon
+.DocumentRevisions-V100
+.fseventsd
+.TemporaryItems
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
+
+# Windows
+Thumbs.db
+Thumbs.db:encryptable
+ehthumbs.db
+ehthumbs_vista.db
+*.tmp
+*.temp
+*.log
+*.bak
+*.swp
+*.swo
+*~.nib
+local.properties
+.settings/
+.loadpath
+.recommenders
+.externalToolBuilders
+*.launch
+.history
+.svn/
+CVS/
+*.pid
+*.seed
+*.pid.lock
+lib-cov/
+coverage/
+.nyc_output
+.grunt
+bower_components/
+.lock-wscript
+build/ember.js
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.npm
+.eslintcache
+.node_repl_history
+*.tgz
+.yarn-integrity
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.npm
+.eslintcache
+
+# Linux
+*~
+.fuse_hidden*
+.directory
+.Trash-*
+.nfs*
+
+# =============================================================================
+# PROJECT SPECIFIC - FarsiTranscribe Specific Files
+# =============================================================================
+
+# Output directories
 output/
+results/
+transcriptions/
+exports/
+
+# Audio files (keep only examples)
 *.wav
 *.mp3
 *.m4a
@@ -179,7 +276,6 @@ output/
 *.avi
 *.mov
 *.mp4
-*.m4a
 *.m4v
 *.3gp
 *.3g2
@@ -188,35 +284,182 @@ output/
 *.f4a
 *.f4b
 
+# Keep example audio files
+!examples/audio/*.wav
+!examples/audio/*.mp3
+!examples/audio/*.m4a
+!examples/audio/*.flac
+
 # Transcription output files
 *_unified_transcription.txt
 *_cleaned_transcription.txt
 *_metadata.json
 transcription.log
+*.srt
+*.vtt
 
-# Model cache
+# Model cache and weights
 *.pt
 *.pth
 *.bin
 *.safetensors
+*.onnx
+*.tflite
+*.pb
+models/
+checkpoints/
+weights/
+
+# Whisper model cache
+~/.cache/whisper/
+.cache/whisper/
 
 # Temporary files
 *.tmp
 *.temp
-.DS_Store
-Thumbs.db
-
-# IDE
-.idea/
+*.bak
+*.backup
+*.old
+*.orig
+*.rej
 *.swp
 *.swo
 *~
 
-# OS
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db 
+# Test artifacts
+test_output/
+test_results/
+.pytest_cache/
+
+# Performance monitoring logs
+performance_logs/
+*.perf
+*.profile
+
+# =============================================================================
+# DEVELOPMENT and DEBUGGING
+# =============================================================================
+
+# Debug files
+*.debug
+debug.log
+debug_*.log
+
+# Profiling
+*.prof
+*.profile
+
+# Memory dumps
+*.dump
+*.dmp
+
+# Crash reports
+crash.log
+crash_*.log
+
+# =============================================================================
+# SECURITY and SENSITIVE DATA
+# =============================================================================
+
+# API keys and secrets
+*.key
+*.pem
+*.p12
+*.pfx
+secrets.json
+secrets.yaml
+secrets.yml
+config.local.json
+config.local.yaml
+config.local.yml
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# =============================================================================
+# BUILD and DEPLOYMENT
+# =============================================================================
+
+# Build artifacts
+build/
+dist/
+*.tar.gz
+*.zip
+*.rar
+
+# Docker
+Dockerfile.local
+docker-compose.override.yml
+.dockerignore
+
+# Kubernetes
+*.kubeconfig
+
+# =============================================================================
+# MISC - Other Common Files to Ignore
+# =============================================================================
+
+# Backup files
+*.bak
+*.backup
+*.old
+*.orig
+
+# Lock files (keep package managers)
+package-lock.json
+yarn.lock
+composer.lock
+
+# Local configuration
+.local
+local.*
+
+# User-specific files
+user_settings.json
+personal_config.py
+
+# =============================================================================
+# KEEP ESSENTIAL FILES - Explicitly Track Important Files
+# =============================================================================
+
+# Force include important files (even if they match patterns above)
+!requirements.txt
+!pyproject.toml
+!setup.py
+!setup.cfg
+!MANIFEST.in
+!README.md
+!LICENSE
+!CHANGELOG.md
+!CONTRIBUTING.md
+!CODE_OF_CONDUCT.md
+!.gitignore
+!.gitattributes
+
+# Force include source code
+!src/**/*.py
+!tests/**/*.py
+!scripts/**/*.py
+!main.py
+
+# Force include configuration
+!src/**/*.toml
+!src/**/*.yaml
+!src/**/*.yml
+!src/**/*.json
+
+# Force include documentation
+!docs/**/*.md
+!docs/**/*.rst
+!docs/**/*.txt
+
+# Force include examples (but not large files)
+!examples/**/*.py
+!examples/**/*.md
+!examples/**/*.txt
+
+# =============================================================================
+# END OF GITIGNORE
+# ============================================================================= 
