--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ openai-whisper>=20231117
 torch>=2.0.0
 torchaudio>=2.0.0
 numpy>=1.24.0
+transformers>=4.30.0
+huggingface-hub>=0.15.0
 
 # Audio handling
 pydub>=0.25.1
