--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,14 @@ torchaudio>=2.0.0
 numpy>=1.24.0
 transformers>=4.30.0
 huggingface-hub>=0.15.0
+requests>=2.28.0
+urllib3>=1.26.0
 
 # Audio handling
 pydub>=0.25.1
 ffmpeg-python>=0.2.0
+librosa>=0.10.0
+soundfile>=0.12.0
 
 # Signal processing (for noise reduction)
 scipy>=1.9.0
@@ -19,6 +23,12 @@ scipy>=1.9.0
 # Progress and utilities
 tqdm>=4.65.0
 psutil>=5.9.0
+
+# Persian NLP (optional but recommended)
+hazm>=0.7.0
+
+# Advanced Quality Features
+scikit-learn>=1.0.0
 
 # Optional but recommended for development
 # pytest>=7.0.0
