--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,9 +55,21 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pytest>=7.0.0",
+    "pytest-cov>=4.1.0",
+    "pytest-xdist>=3.5.0",
     "black>=23.0.0",
     "flake8>=6.0.0",
+    "flake8-docstrings>=1.7.0",
+    "flake8-bugbear>=24.2.6",
+    "flake8-comprehensions>=3.14.0",
+    "flake8-simplify>=0.21.0",
     "mypy>=1.0.0",
+    "pre-commit>=3.5.0",
+    "bandit>=1.7.8",
+    "isort>=5.13.2",
+    "pyupgrade>=3.15.1",
+    "types-requests>=2.31.0",
+    "types-setuptools>=69.0.0",
 ]
 
 [project.scripts]
