Refactor argument formatting in main.py for improved readability, update numpy version constraint in pyproject.toml and requirements.txt to prevent compatibility issues, enhance CI workflow with permissions and conditional execution, and apply consistent formatting across various utility modules. This update streamlines code structure and enhances maintainability.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
 
+permissions:
+  contents: read
+  security-events: write
+
 on:
   push:
     branches: [ main, develop ]
@@ -177,6 +181,8 @@ jobs:
   security:
     name: Security Scan
     runs-on: ubuntu-latest
+    # Skip on pull requests from forks due to token limitations
+    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
     steps:
       - uses: actions/checkout@v4
       
