--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 openai-whisper>=20231117
 torch>=2.0.0
 torchaudio>=2.0.0
-numpy>=1.24.0
+numpy>=1.24.0,<2.0
 transformers>=4.30.0
 huggingface-hub>=0.15.0
 requests>=2.28.0
