به‌روزرسانی نسخه‌های وابستگی‌ها در فایل requirements.txt شامل تغییر به نسخه‌های خاص برای torch، torchaudio، numpy، hazm، datasets، accelerate، peft و bitsandbytes. همچنین، وابستگی‌های جدید fsspec و gensim به فایل اضافه شده‌اند تا سازگاری و عملکرد پروژه بهبود یابد.

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,10 @@
 
 # Core ML and audio processing
 openai-whisper>=20231117
-torch>=2.0.0
-torchaudio>=2.0.0
-numpy>=1.24.0,<2.0
+torch==2.0.1
+torchaudio==2.0.2
+torchvision==0.15.2
+numpy==1.24.3
 transformers>=4.35.0
 huggingface-hub>=0.19.0
 requests>=2.28.0
@@ -25,16 +26,16 @@ tqdm>=4.65.0
 psutil>=5.9.0
 
 # Persian NLP (optional but recommended)
-hazm>=0.7.0
+hazm==0.10.0
 
 # Advanced Quality Features
 scikit-learn>=1.0.0
 
 # Fine-tuning specific dependencies
-datasets>=2.14.0
-accelerate>=0.20.0
-peft>=0.4.0
-bitsandbytes>=0.41.0
+datasets==4.0.0
+accelerate==0.20.3
+peft==0.3.0
+bitsandbytes==0.39.0
 wandb>=0.15.0
 tensorboard>=2.13.0
 sentencepiece>=0.1.99
@@ -42,3 +43,7 @@ protobuf>=3.20.0
 evaluate>=0.4.0
 rouge-score>=0.1.2
 sacrebleu>=0.1.0
+
+# Additional dependencies to ensure compatibility
+fsspec==2025.3.0
+gensim==4.3.3
