--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@
 
 # Core ML and audio processing
 openai-whisper>=20231117
-torch==2.0.1
-torchaudio==2.0.2
-torchvision==0.15.2
+torch==2.1.2
+torchaudio==2.1.2
+torchvision==0.16.2
 numpy==1.24.3
 transformers>=4.35.0
 huggingface-hub>=0.19.0
@@ -47,3 +47,8 @@ sacrebleu>=0.1.0
 # Additional dependencies to ensure compatibility
 fsspec==2025.3.0
 gensim==4.3.3
+pyannote.audio==3.1.1
+torch>=2.0.0
+torchaudio>=2.0.0
+soundfile>=0.12.0
+rich>=13.0.0
