--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,200 +1,200 @@
-name: CI
+# name: CI
 
-permissions:
-  contents: read
-  security-events: write
+# permissions:
+#   contents: read
+#   security-events: write
 
-on:
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main, develop ]
-  workflow_dispatch:
+# on:
+#   push:
+#     branches: [ main, develop ]
+#   pull_request:
+#     branches: [ main, develop ]
+#   workflow_dispatch:
 
-env:
-  PYTHON_VERSION: '3.11'
+# env:
+#   PYTHON_VERSION: '3.11'
 
-jobs:
-  lint:
-    name: Lint Code
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+# jobs:
+#   lint:
+#     name: Lint Code
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ env.PYTHON_VERSION }}
           
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+#       - name: Cache pip dependencies
+#         uses: actions/cache@v4
+#         with:
+#           path: ~/.cache/pip
+#           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
+#           restore-keys: |
+#             ${{ runner.os }}-pip-
             
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install flake8 black mypy
-          pip install -e ".[dev]"
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install flake8 black mypy
+#           pip install -e ".[dev]"
           
-      - name: Format check with Black
-        run: black --check src/ tests/ main.py
+#       - name: Format check with Black
+#         run: black --check src/ tests/ main.py
         
-      - name: Lint with Flake8
-        run: |
-          # Stop the build if there are Python syntax errors or undefined names
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          # Exit-zero treats all errors as warnings
-          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=79 --statistics
+#       - name: Lint with Flake8
+#         run: |
+#           # Stop the build if there are Python syntax errors or undefined names
+#           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+#           # Exit-zero treats all errors as warnings
+#           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=79 --statistics
 
-  type-check:
-    name: Type Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+#   type-check:
+#     name: Type Check
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ env.PYTHON_VERSION }}
           
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+#       - name: Cache pip dependencies
+#         uses: actions/cache@v4
+#         with:
+#           path: ~/.cache/pip
+#           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
+#           restore-keys: |
+#             ${{ runner.os }}-pip-
             
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install mypy
-          pip install -e ".[dev]"
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install mypy
+#           pip install -e ".[dev]"
           
-      - name: Type check with mypy
-        run: mypy src/ tests/ main.py --install-types --non-interactive
+#       - name: Type check with mypy
+#         run: mypy src/ tests/ main.py --install-types --non-interactive
 
-  test:
-    name: Test Python ${{ matrix.python-version }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.8', '3.9', '3.10', '3.11']
-        exclude:
-          # Skip some combinations to save CI time
-          - os: windows-latest
-            python-version: '3.9'
-          - os: macos-latest
-            python-version: '3.9'
+#   test:
+#     name: Test Python ${{ matrix.python-version }} on ${{ matrix.os }}
+#     runs-on: ${{ matrix.os }}
+#     strategy:
+#       fail-fast: false
+#       matrix:
+#         os: [ubuntu-latest, windows-latest, macos-latest]
+#         python-version: ['3.8', '3.9', '3.10', '3.11']
+#         exclude:
+#           # Skip some combinations to save CI time
+#           - os: windows-latest
+#             python-version: '3.9'
+#           - os: macos-latest
+#             python-version: '3.9'
             
-    steps:
-      - uses: actions/checkout@v4
+#     steps:
+#       - uses: actions/checkout@v4
       
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
+#       - name: Set up Python ${{ matrix.python-version }}
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ matrix.python-version }}
           
-      - name: Install system dependencies (Ubuntu)
-        if: runner.os == 'Linux'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y ffmpeg
+#       - name: Install system dependencies (Ubuntu)
+#         if: runner.os == 'Linux'
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y ffmpeg
           
-      - name: Install system dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew install ffmpeg
+#       - name: Install system dependencies (macOS)
+#         if: runner.os == 'macOS'
+#         run: |
+#           brew install ffmpeg
           
-      - name: Install system dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          choco install ffmpeg
+#       - name: Install system dependencies (Windows)
+#         if: runner.os == 'Windows'
+#         run: |
+#           choco install ffmpeg
           
-      - name: Cache pip dependencies
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+#       - name: Cache pip dependencies
+#         uses: actions/cache@v4
+#         with:
+#           path: ~/.cache/pip
+#           key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt', '**/pyproject.toml') }}
+#           restore-keys: |
+#             ${{ runner.os }}-pip-
             
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install pytest pytest-cov pytest-xdist
-          pip install -e ".[dev]"
+#       - name: Install dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install pytest pytest-cov pytest-xdist
+#           pip install -e ".[dev]"
           
-      - name: Run tests with coverage
-        run: |
-          pytest -v --cov=src --cov=farsi_transcribe --cov-report=xml --cov-report=html --cov-report=term-missing
+#       - name: Run tests with coverage
+#         run: |
+#           pytest -v --cov=src --cov=farsi_transcribe --cov-report=xml --cov-report=html --cov-report=term-missing
           
-      - name: Upload coverage to Codecov
-        if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
-        uses: codecov/codecov-action@v4
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          flags: unittests
-          name: codecov-umbrella
-          fail_ci_if_error: false
-          verbose: true
+#       - name: Upload coverage to Codecov
+#         if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
+#         uses: codecov/codecov-action@v4
+#         with:
+#           token: ${{ secrets.CODECOV_TOKEN }}
+#           file: ./coverage.xml
+#           flags: unittests
+#           name: codecov-umbrella
+#           fail_ci_if_error: false
+#           verbose: true
 
-  package:
-    name: Build Package
-    runs-on: ubuntu-latest
-    needs: [lint, type-check, test]
-    steps:
-      - uses: actions/checkout@v4
+#   package:
+#     name: Build Package
+#     runs-on: ubuntu-latest
+#     needs: [lint, type-check, test]
+#     steps:
+#       - uses: actions/checkout@v4
       
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+#       - name: Set up Python
+#         uses: actions/setup-python@v5
+#         with:
+#           python-version: ${{ env.PYTHON_VERSION }}
           
-      - name: Install build dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install build wheel twine
+#       - name: Install build dependencies
+#         run: |
+#           python -m pip install --upgrade pip
+#           pip install build wheel twine
           
-      - name: Build package
-        run: python -m build
+#       - name: Build package
+#         run: python -m build
         
-      - name: Check package
-        run: |
-          twine check dist/*
-          pip install dist/*.whl
-          python -c "import farsi_transcribe; print(farsi_transcribe.__version__)"
+#       - name: Check package
+#         run: |
+#           twine check dist/*
+#           pip install dist/*.whl
+#           python -c "import farsi_transcribe; print(farsi_transcribe.__version__)"
           
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: dist-packages
-          path: dist/
+#       - name: Upload artifacts
+#         uses: actions/upload-artifact@v4
+#         with:
+#           name: dist-packages
+#           path: dist/
 
-  security:
-    name: Security Scan
-    runs-on: ubuntu-latest
-    # Skip on pull requests from forks due to token limitations
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
-    steps:
-      - uses: actions/checkout@v4
+#   security:
+#     name: Security Scan
+#     runs-on: ubuntu-latest
+#     # Skip on pull requests from forks due to token limitations
+#     if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+#     steps:
+#       - uses: actions/checkout@v4
       
-      - name: Run Trivy vulnerability scanner
-        uses: aquasecurity/trivy-action@master
-        with:
-          scan-type: 'fs'
-          scan-ref: '.'
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+#       - name: Run Trivy vulnerability scanner
+#         uses: aquasecurity/trivy-action@master
+#         with:
+#           scan-type: 'fs'
+#           scan-ref: '.'
+#           format: 'sarif'
+#           output: 'trivy-results.sarif'
           
-      - name: Upload Trivy scan results to GitHub Security tab
-        uses: github/codeql-action/upload-sarif@v3
-        with:
-          sarif_file: 'trivy-results.sarif'
+#       - name: Upload Trivy scan results to GitHub Security tab
+#         uses: github/codeql-action/upload-sarif@v3
+#         with:
+#           sarif_file: 'trivy-results.sarif'
