--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,11 @@
 
 # Core ML and audio processing
 openai-whisper>=20231117
-torch==2.1.2
-torchaudio==2.1.2
-torchvision==0.16.2
-numpy==1.24.3
+# Allow user to choose CUDA build; avoid pinning exact patch versions
+torch>=2.1.0
+torchaudio>=2.1.0
+torchvision>=0.16.0
+numpy>=1.24.0,<2.0
 transformers>=4.35.0
 huggingface-hub>=0.19.0
 requests>=2.28.0
@@ -26,16 +27,16 @@ tqdm>=4.65.0
 psutil>=5.9.0
 
 # Persian NLP (optional but recommended)
-hazm==0.10.0
+hazm>=0.7.0
 
 # Advanced Quality Features
 scikit-learn>=1.0.0
 
-# Fine-tuning specific dependencies
-datasets==4.0.0
-accelerate==0.20.3
-peft==0.3.0
-bitsandbytes==0.39.0
+# Fine-tuning specific dependencies (optional)
+datasets>=2.12.0
+accelerate>=0.20.0
+peft>=0.3.0
+bitsandbytes>=0.39.0
 wandb>=0.15.0
 tensorboard>=2.13.0
 sentencepiece>=0.1.99
@@ -44,11 +45,9 @@ evaluate>=0.4.0
 rouge-score>=0.1.2
 sacrebleu>=0.1.0
 
-# Additional dependencies to ensure compatibility
-fsspec==2025.3.0
-gensim==4.3.3
-pyannote.audio==3.1.1
-torch>=2.0.0
-torchaudio>=2.0.0
+# Additional dependencies
+fsspec>=2023.9.0
+gensim>=4.3.0
+pyannote.audio>=3.1.0  # optional; install via install_pyannote.py
 soundfile>=0.12.0
 rich>=13.0.0
