--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -54,7 +54,7 @@ repos:
     rev: 1.7.8
     hooks:
       - id: bandit
-        args: [-r, src/, -ll]
+        args: [-r, farsi_transcribe/, -ll]
         exclude: ^tests/
         
   - repo: https://github.com/pre-commit/mirrors-prettier
