--- a/pytest.ini
+++ b/pytest.ini
@@ -1,21 +1,3 @@
 [tool:pytest]
-testpaths = tests
-python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-addopts = 
-    -v
-    --tb=short
-    --strict-markers
-    --disable-warnings
-    --cov=src
-    --cov-report=term-missing
-    --cov-report=html
-    --cov-report=xml
-markers =
-    slow: marks tests as slow (deselect with '-m "not slow"')
-    integration: marks tests as integration tests
-    unit: marks tests as unit tests
-filterwarnings =
-    ignore::DeprecationWarning
-    ignore::PendingDeprecationWarning 
+; Single source of truth for pytest options lives in pyproject.toml ([tool.pytest.ini_options]).
+; This file remains for compatibility with tools expecting pytest.ini but defers to pyproject.
